--- a/alpine/Dockerfile
+++ b/alpine/Dockerfile
@@ -1,9 +1,9 @@
 
+# NGSPICE in Alpine Linux 
+
 FROM alpine:latest
 
-ENV NGSPICE_VERSION 27
-
-RUN echo $NGSPICE_VERSION
+ENV NGSPICE_VERSION 33
 
 RUN apk add --no-cache --virtual .build-deps \
     autoconf automake bison curl flex g++ libx11-dev libxaw-dev libtool make
@@ -17,5 +17,4 @@ RUN curl -fSL https://github.com/imr/ngspice/archive/ngspice-$NGSPICE_VERSION.ta
     && ./configure \
     && make \
     && make install
-
 
